--- a/_slides/18-ylzhu123.md
+++ b/_slides/18-ylzhu123.md
@@ -4,6 +4,7 @@ title: "Welcome to our slide deck!"
 ---
 
 Caption here
+“Hello!"
 
 ![cooler-octocat](https://octodex.github.com/images/twenty-percent-cooler-octocat.png)
 {: .center}
